# xshm-cap

./: CMakeLists.txt  README.md  xhelpers.c  xhelpers.h  xshm-cap.c  xshm-cap.h
